FireFox/Safari/Chrome/Opera will work fine as for HTML5 supported version.
It's hard to check all versions above browsers as you know. I hope you understand.

=================================
Change Log
=================================

Latest changes might exist on the GitHub repository. Please check https://github.com/msyk/INTER-Mediator.

Ver.3.10-dev
- Support FileMaker's portal objects. (by specifying 'relation' => array('portal' => true) ).
- New sample (Master-Detail Style Page for FileMaker's portal access version) is added.
- Modify FX.php for FileMaker Server to enable the "fmalt" and retrieve the record id on portal objects.
- [INFO] FileMaker's portal objects requires FileMaker Server 9 or later.
- [BUG FIX] Fix DataConverter_FMDateTime and DataConverter_MySQLDateTime's issue on Windows.

Ver.3.9 (2013/9/28)
- The definition file editor works reading/writing. You can call it at the start of logs on debug mode.
- Customize the login panel by CSS definitions.
- The title of the login panel can be set to property as like "INTERMediatorOnPage.authPanelTitle = "title";".
- Update FX.php to fix compatibility with FileMaker Server 12.
- Enable omitting to place the primary key field object on a layout when using FileMaker Server
  (by specifying 'key' => '-recid').
- MediaAccess can choose inline or attachment.
- [BUG FIX] Fix display unnecessary insert button and delete button on the navigation bar after pressing an "enter" key
            in the text box of the moving page control on the navigation bar (WebKit browsers only).
- [BUG FIX] Authentication and Authorization for groups.
- [BUG FIX] FileMaker_FX class isolates the FX object to data and auth.
- [BUG FIX] File uploader didn't respond on the message and progress.
- [BUG FIX] The field for radio buttons reports "Anyone changed this field" message.

Ver.3.8 (2013/8/22)
- The official INTER-Mediator site is http://inter-mediator.org/.